# AlphaQuart

./: Cargo.toml
.github/workflows/: rust.yml
src/: api.rs  lib.rs  main.rs  runner.rs  util.rs  utils.rs
src/game/: action.rs  board.rs  mod.rs  piece.rs  player.rs  utils.rs
src/policies/: greedy_random_policy.rs  mcs_policy.rs  mcts_policy.rs  mod.rs  one_step_look_ahead_policy.rs  policy.rs  random_policy.rs  test_utils.rs
tests/: board_test.rs  game_test.rs  policy_vs_policy_test.rs
